[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-pluggy"
version = "0.1.1"
authors = [{name="Cryotap"}]
description = "Python plugin and permission manager for endstone"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "plugin manager", "manager", "permission manager"]

[project.entry-points."endstone"]
pluggy = "endstone_pluggy:Pluggy"